gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/ufcs.d
version https://git-lfs.github.com/spec/v1
oid sha256:2bee3ca68ebe21092122213e90c8a8b71c5c082b5f75fc0b2142be03692171fb
size 1415
